--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           method: "POST",
           headers: {
             "Content-Type": "application/json",
-            "X-Goog-Api-Key": "DIN_GOOGLE_MAPS_API_KEY",
+            "X-Goog-Api-Key": "AIzaSyC4KVPzijWJug6VZBGsnBsDBXiuRvUR60o",
             "X-Goog-FieldMask": "routes.distanceMeters"
           },
           body: JSON.stringify({
@@ -171,7 +171,7 @@
   </script>
 
   <script
-    src="https://maps.googleapis.com/maps/api/js?key=DIN_GOOGLE_MAPS_API_KEY&libraries=places&callback=initAutocomplete"
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4KVPzijWJug6VZBGsnBsDBXiuRvUR60o=places&callback=initAutocomplete"
     async
     defer
   ></script>
