--- a/index.html
+++ b/index.html
@@ -1,179 +1,185 @@
-
 <!DOCTYPE html>
 <html lang="no">
 <head>
   <meta charset="UTF-8" />
-  <title>MinPris – tilbudskalkulator</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>🏠 MinPris – tilbudskalkulator</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
     body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #f5f7fa;
-      padding: 20px;
+      font-family: system-ui, sans-serif;
+      background: #f4f6fb;
+      padding: 16px;
     }
-
-    .container {
-      max-width: 700px;
+    .box {
+      max-width: 760px;
       margin: auto;
       background: white;
-      padding: 24px;
-      border-radius: 12px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+      padding: 20px;
+      border-radius: 14px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
     }
-
-    h1 {
-      margin-bottom: 4px;
-    }
-
     label {
-      display: block;
-      margin-top: 16px;
       font-weight: 600;
+      display: block;
+      margin-top: 14px;
     }
-
     input, textarea {
       width: 100%;
       padding: 12px;
       margin-top: 6px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-    }
-
-    button {
-      margin-top: 18px;
-      padding: 14px;
-      width: 100%;
-      font-size: 16px;
       border-radius: 10px;
+      border: 1px solid #ccc;
+      font-size: 15px;
+    }
+    button {
+      width: 100%;
+      padding: 14px;
+      margin-top: 14px;
+      font-size: 15px;
+      font-weight: 600;
+      border-radius: 12px;
       border: none;
       cursor: pointer;
+    }
+    #beregnBtn {
+      background: #111827;
+      color: white;
+    }
+    #aiBtn {
       background: #2563eb;
       color: white;
-      font-weight: 600;
     }
-
-    .row {
-      display: flex;
-      gap: 16px;
-      align-items: center;
-      margin-top: 12px;
+    #avstandBtn {
+      background: #2563eb;
+      color: white;
     }
-
-    .row input[type="checkbox"] {
-      width: auto;
-      margin-right: 6px;
-    }
-
-    .info {
+    pre {
+      background: #f1f5f9;
+      padding: 14px;
+      border-radius: 10px;
       margin-top: 10px;
-      font-weight: 600;
+      white-space: pre-wrap;
     }
   </style>
 </head>
 
 <body>
-  <div class="container">
-    <h1>🏠 MinPris – tilbudskalkulator</h1>
-    <p>Kalkuler kjøring automatisk med Google Maps</p>
+<div class="box">
+  <h1>🏠 MinPris – tilbudskalkulator</h1>
+  <p>Kalkuler kjøring automatisk med Google Maps</p>
 
-    <label>Jobbbeskrivelse</label>
-    <textarea placeholder="F.eks: 40t riving, 20t rengjøring"></textarea>
+  <label>Jobbbeskrivelse</label>
+  <textarea id="beskrivelse" rows="3" placeholder="F.eks: 40t riving, 20t rengjøring"></textarea>
 
-    <label>Timepris (kr)</label>
-    <input type="number" />
+  <label>Timepris (kr)</label>
+  <input id="timepris" type="number" />
 
-    <label>Firmaadresse</label>
-    <input id="fromAddress" placeholder="F.eks: Storgata 1, Oslo" />
+  <label>Firmaadresse</label>
+  <input id="firmaadresse" type="text" placeholder="F.eks: Storgata 1, Oslo" />
 
-    <label>Kundeadresse</label>
-    <input id="toAddress" placeholder="F.eks: Karl Johans gate 10, Oslo" />
+  <label>Kundeadresse</label>
+  <input id="kundeadresse" type="text" placeholder="F.eks: Karl Johans gate 10, Oslo" />
 
-    <button onclick="calculateDistance()">Beregn avstand automatisk</button>
+  <button type="button" id="avstandBtn">Beregn avstand automatisk</button>
 
-    <div class="row">
-      <input type="checkbox" id="roundTrip" checked />
-      <label for="roundTrip">Tur / retur</label>
-    </div>
+  <label style="display:flex;align-items:center;gap:8px;">
+    <input type="checkbox" id="turRetur" checked />
+    Tur / retur
+  </label>
 
-    <label>Kilometer per dag</label>
-    <input id="kmPerDag" type="number" />
+  <label>Kilometer per dag</label>
+  <input id="kmPerDag" type="number" />
 
-    <label>Pris per km (kr)</label>
-    <input value="15" type="number" />
+  <label>Pris per km (kr)</label>
+  <input id="prisPerKm" type="number" value="15" />
 
-    <div class="info" id="distanceInfo"></div>
-  </div>
+  <button id="beregnBtn">Beregn</button>
+  <button id="aiBtn" disabled>Generer tilbudstekst</button>
 
-  <!-- Google Maps -->
-  <script>
-    let autocompleteFrom;
-    let autocompleteTo;
+  <h3>Resultat</h3>
+  <pre id="resultat"></pre>
+</div>
 
-    function initAutocomplete() {
-      autocompleteFrom = new google.maps.places.Autocomplete(
-        document.getElementById("fromAddress"),
-        { types: ["geocode"], componentRestrictions: { country: "no" } }
-      );
+<script>
+/* ---------- AUTOCOMPLETE ---------- */
+function initAutocomplete() {
+  new google.maps.places.Autocomplete(
+    document.getElementById("firmaadresse"),
+    { types: ["address"], componentRestrictions: { country: "no" } }
+  );
+  new google.maps.places.Autocomplete(
+    document.getElementById("kundeadresse"),
+    { types: ["address"], componentRestrictions: { country: "no" } }
+  );
+  console.log("Autocomplete aktivert ✅");
+}
 
-      autocompleteTo = new google.maps.places.Autocomplete(
-        document.getElementById("toAddress"),
-        { types: ["geocode"], componentRestrictions: { country: "no" } }
-      );
-    }
+/* ---------- BEREGN AVSTAND ---------- */
+document.getElementById("avstandBtn").onclick = async () => {
+  const fra = document.getElementById("firmaadresse").value;
+  const til = document.getElementById("kundeadresse").value;
+  const turRetur = document.getElementById("turRetur").checked;
 
-    async function calculateDistance() {
-      const origin = document.getElementById("fromAddress").value;
-      const destination = document.getElementById("toAddress").value;
-      const roundTrip = document.getElementById("roundTrip").checked;
+  if (!fra || !til) {
+    alert("Fyll inn begge adresser");
+    return;
+  }
 
-      if (!origin || !destination) {
-        alert("Fyll inn begge adresser");
-        return;
-      }
+  const res = await fetch("https://routes.googleapis.com/directions/v2:computeRoutes", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json",
+      "X-Goog-Api-Key": "DIN_GOOGLE_MAPS_API_KEY",
+      "X-Goog-FieldMask": "routes.distanceMeters"
+    },
+    body: JSON.stringify({
+      origin: { address: fra },
+      destination: { address: til },
+      travelMode: "DRIVE"
+    })
+  });
 
-      const response = await fetch(
-        https://routes.googleapis.com/directions/v2:computeRoutes,
-        {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-            "X-Goog-Api-Key": "AIzaSyC4KVPzijWJug6VZBGsnBsDBXiuRvUR60o",
-            "X-Goog-FieldMask": "routes.distanceMeters"
-          },
-          body: JSON.stringify({
-            origin: { address: origin },
-            destination: { address: destination },
-            travelMode: "DRIVE"
-          })
-        }
-      );
+  const data = await res.json();
+  let km = data.routes[0].distanceMeters / 1000;
+  if (turRetur) km *= 2;
 
-      const data = await response.json();
+  document.getElementById("kmPerDag").value = km.toFixed(1);
+};
 
-      if (!data.routes || !data.routes[0]) {
-        alert("Kunne ikke beregne avstand");
-        return;
-      }
+/* ---------- BEREGN PRIS ---------- */
+document.getElementById("beregnBtn").onclick = () => {
+  const timer =
+    (document.getElementById("beskrivelse").value.match(/(\d+)\s*t/gi) || [])
+      .map(x => Number(x.replace(/\D/g, "")))
+      .reduce((a,b) => a + b, 0);
 
-      let meters = data.routes[0].distanceMeters;
-      let km = meters / 1000;
+  const dager = Math.max(1, Math.ceil(timer / 7.5));
+  const arbeid = timer * Number(timepris.value);
+  const kjøring = dager * Number(kmPerDag.value) * Number(prisPerKm.value);
 
-      if (roundTrip) km *= 2;
+  const total = arbeid + kjøring;
 
-      km = Math.round(km * 10) / 10;
+  document.getElementById("resultat").textContent =
+`Timer: ${timer}
+Dager: ${dager}
 
-      document.getElementById("kmPerDag").value = km;
-      document.getElementById("distanceInfo").innerText =
-        Avstand beregnet: ${km} km ${roundTrip ? "(tur/retur)" : "(én vei)"};
-    }
-  </script>
+Arbeid: ${arbeid} kr
+Kjøring: ${kjøring} kr
 
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4KVPzijWJug6VZBGsnBsDBXiuRvUR60o=places&callback=initAutocomplete"
-    async
-    defer
-  ></script>
+Totalt eks. mva: ${total} kr
+Totalt inkl. mva: ${Math.round(total * 1.25)} kr`;
+
+  document.getElementById("aiBtn").disabled = false;
+};
+</script>
+
+<script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4KVPzijWJug6VZBGsnBsDBXiuRvUR60o=places&callback=initAutocomplete"
+  async
+  defer
+</script>
+
+
 </body>
 </html>
