--- a/index.html
+++ b/index.html
@@ -1,96 +1,183 @@
+22:01
+Du har sendt
 <!DOCTYPE html>
 <html lang="no">
 <head>
-<meta charset="UTF-8" />
-<title>🏠 MinPris – tilbudskalkulator</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8" />
+  <title>🏠 MinPris – tilbudskalkulator</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<style>
-body { font-family: system-ui,sans-serif; background:#f4f6fb; padding:16px }
-.box { max-width:760px; margin:auto; background:#fff; padding:20px; border-radius:14px; box-shadow:0 10px 30px rgba(0,0,0,.1) }
-label { font-weight:600; display:block; margin-top:14px }
-input,textarea { width:100%; padding:12px; margin-top:6px; border-radius:10px; border:1px solid #ccc }
-button { width:100%; padding:14px; margin-top:14px; font-weight:600; border-radius:12px; border:none; cursor:pointer }
-#beregnBtn { background:#111827; color:#fff }
-#aiBtn,#avstandBtn { background:#2563eb; color:#fff }
-pre { background:#f1f5f9; padding:14px; border-radius:10px; margin-top:10px; white-space:pre-wrap }
-</style>
+  <style>
+    body {
+      font-family: system-ui, sans-serif;
+      background: #f4f6fb;
+      padding: 16px;
+    }
+    .box {
+      max-width: 760px;
+      margin: auto;
+      background: white;
+      padding: 20px;
+      border-radius: 14px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+    }
+    label {
+      font-weight: 600;
+      display: block;
+      margin-top: 14px;
+    }
+    input, textarea {
+      width: 100%;
+      padding: 12px;
+      margin-top: 6px;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+      font-size: 15px;
+    }
+    button {
+      width: 100%;
+      padding: 14px;
+      margin-top: 14px;
+      font-size: 15px;
+      font-weight: 600;
+      border-radius: 12px;
+      border: none;
+      cursor: pointer;
+    }
+    #beregnBtn { background: #111827; color: white; }
+    #aiBtn { background: #2563eb; color: white; }
+    #avstandBtn { background: #2563eb; color: white; }
+    pre {
+      background: #f1f5f9;
+      padding: 14px;
+      border-radius: 10px;
+      margin-top: 10px;
+      white-space: pre-wrap;
+    }
+  </style>
 </head>
 
 <body>
 <div class="box">
-<h1>🏠 MinPris – tilbudskalkulator</h1>
+  <h1>🏠 MinPris – tilbudskalkulator</h1>
+  <p>Kalkuler pris og kjøring automatisk</p>
 
-<label>Jobbbeskrivelse</label>
-<textarea id="beskrivelse" rows="3" placeholder="F.eks: 40t riving, 20t rengjøring"></textarea>
+  <label>Jobbbeskrivelse</label>
+  <textarea id="beskrivelse" rows="3" placeholder="F.eks: 40t riving, 20t rengjøring"></textarea>
 
-<label>Timepris (kr)</label>
-<input id="timepris" type="number">
+  <label>Timepris (kr)</label>
+  <input id="timepris" type="number" />
 
-<label>Firmaadresse</label>
-<input id="firmaadresse" type="text">
+  <label>Firmaadresse</label>
+  <input id="firmaadresse" type="text" placeholder="F.eks: Storgata 1, Oslo" />
 
-<label>Kundeadresse</label>
-<input id="kundeadresse" type="text">
+  <label>Kundeadresse</label>
+  <input id="kundeadresse" type="text" placeholder="F.eks: Karl Johans gate 10, Oslo" />
 
-<button type="button" id="avstandBtn">Beregn avstand automatisk</button>
+  <button type="button" id="avstandBtn">Beregn avstand automatisk</button>
 
-<label style="display:flex;gap:8px;align-items:center">
-<input type="checkbox" id="turRetur" checked> Tur / retur
-</label>
+  <label style="display:flex;align-items:center;gap:8px;">
+    <input type="checkbox" id="turRetur" checked />
+    Tur / retur
+  </label>
 
-<label>Kilometer per dag</label>
-<input id="kmPerDag" type="number">
+  <label>Kilometer per dag</label>
+  <input id="kmPerDag" type="number" />
 
-<label>Pris per km (kr)</label>
-<input id="prisPerKm" type="number" value="15">
+  <label>Pris per km (kr)</label>
+  <input id="prisPerKm" type="number" value="15" />
 
-<button id="beregnBtn">Beregn</button>
-<button id="aiBtn" disabled>Generer tilbudstekst</button>
+  <label>Avfall (kr)</label>
+  <input id="avfall" type="number" value="0" />
 
-<h3>Resultat</h3>
-<pre id="resultat"></pre>
+  <label>Materiell totalt (kr)</label>
+  <input id="materiell" type="number" value="0" />
+
+  <label>Forbruk HMS per dag (kr)</label>
+  <input id="hmsPerDag" type="number" value="0" />
+
+  <button id="beregnBtn">Beregn</button>
+  <button id="aiBtn" disabled>Generer tilbudstekst</button>
+
+  <h3>Resultat</h3>
+  <pre id="resultat"></pre>
 </div>
 
+<!-- GOOGLE MAPS -->
+<script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4KVPzijWJug6VZBGsnBsDBXiuRvUR60o=places&language=no&region=NO&loading=async"
+  async>
+</script>
+
 <script>
-function initAutocomplete() {
-  new google.maps.places.Autocomplete(firmaadresse,{types:["address"],componentRestrictions:{country:"no"}});
-  new google.maps.places.Autocomplete(kundeadresse,{types:["address"],componentRestrictions:{country:"no"}});
-}
+/* ---------- AUTOCOMPLETE ---------- */
+window.addEventListener("load", () => {
+  if (!google?.maps?.places) {
+    console.error("❌ Google Places ikke lastet");
+    return;
+  }
 
-/* Avstand */
-avstandBtn.onclick = async () => {
-  if(!firmaadresse.value || !kundeadresse.value) return alert("Fyll inn begge adresser");
+  new google.maps.places.Autocomplete(
+    document.getElementById("firmaadresse"),
+    { types: ["address"], componentRestrictions: { country: "no" } }
+  );
 
-  const res = await fetch("https://routes.googleapis.com/directions/v2:computeRoutes",{
-    method:"POST",
-    headers:{
-      "Content-Type":"application/json",
-      "X-Goog-Api-Key":"AIzaSyC4KVPzijWJug6VZBGsnBsDBXiuRvUR60o",
-      "X-Goog-FieldMask":"routes.distanceMeters"
+  new google.maps.places.Autocomplete(
+    document.getElementById("kundeadresse"),
+    { types: ["address"], componentRestrictions: { country: "no" } }
+  );
+
+  console.log("✅ Autocomplete aktivert");
+});
+
+/* ---------- BEREGN AVSTAND ---------- */
+document.getElementById("avstandBtn").onclick = async () => {
+  const fra = firmaadresse.value;
+  const til = kundeadresse.value;
+  const turRetur = turReturCheckbox.checked;
+
+  if (!fra || !til) {
+    alert("Fyll inn begge adresser");
+    return;
+  }
+
+  const res = await fetch("https://routes.googleapis.com/directions/v2:computeRoutes", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json",
+      "X-Goog-Api-Key": "AIzaSyC4KVPzijWJug6VZBGsnBsDBXiuRvUR60o",
+      "X-Goog-FieldMask": "routes.distanceMeters"
     },
-    body:JSON.stringify({
-      origin:{address:firmaadresse.value},
-      destination:{address:kundeadresse.value},
-      travelMode:"DRIVE"
+    body: JSON.stringify({
+      origin: { address: fra },
+      destination: { address: til },
+      travelMode: "DRIVE"
     })
   });
 
   const data = await res.json();
-  let km = data.routes[0].distanceMeters/1000;
-  if(turRetur.checked) km*=2;
+  let km = data.routes[0].distanceMeters / 1000;
+  if (turRetur) km *= 2;
+
   kmPerDag.value = km.toFixed(1);
 };
 
-/* Beregn */
-beregnBtn.onclick = () => {
-  const timer = (beskrivelse.value.match(/(\d+)\s*t/gi)||[])
-    .map(x=>+x.replace(/\D/g,"")).reduce((a,b)=>a+b,0);
+/* ---------- BEREGN TOTAL ---------- */
+document.getElementById("beregnBtn").onclick = () => {
+  const timer =
+    (beskrivelse.value.match(/(\d+)\s*t/gi) || [])
+      .map(x => Number(x.replace(/\D/g, "")))
+      .reduce((a,b) => a + b, 0);
 
-  const dager = Math.max(1,Math.ceil(timer/7.5));
-  const arbeid = timer * Number(timepris.value||0);
-  const kjøring = dager * Number(kmPerDag.value||0) * Number(prisPerKm.value||0);
-  const total = arbeid + kjøring;
+  const dager = Math.max(1, Math.ceil(timer / 7.5));
+
+  const arbeid = timer * Number(timepris.value || 0);
+  const kjøring = dager * Number(kmPerDag.value || 0) * Number(prisPerKm.value || 0);
+  const avfallKr = Number(avfall.value || 0);
+  const materiellKr = Number(materiell.value || 0);
+  const hmsKr = dager * Number(hmsPerDag.value || 0);
+
+  const total = arbeid + kjøring + avfallKr + materiellKr + hmsKr;
 
   resultat.textContent =
 `Timer: ${timer}
@@ -98,17 +185,16 @@ Dager: ${dager}
 
 Arbeid: ${arbeid} kr
 Kjøring: ${kjøring} kr
+Avfall: ${avfallKr} kr
+Materiell: ${materiellKr} kr
+HMS: ${hmsKr} kr
 
 Totalt eks. mva: ${total} kr
-Totalt inkl. mva: ${Math.round(total*1.25)} kr`;
+Totalt inkl. mva: ${Math.round(total * 1.25)} kr`;
 
   aiBtn.disabled = false;
 };
 </script>
-
-<script
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4KVPzijWJug6VZBGsnBsDBXiuRvUR60o=places&callback=initAutocomplete&language=no"
-async defer></script>
 
 </body>
 </html>
